centered current weather card

--- a/weather-app-frontend-client/src/App.css
+++ b/weather-app-frontend-client/src/App.css
@@ -146,7 +146,7 @@ html {
   background-color: black;
 }
 
-.Current-Card {
+.iu.card.Current-Card {
   align-items: center;
   justify-content: center;
 }
